data/derived/sp14/progs/unify/prog0761.ml.out
Characters 109-110:
  else 1 + additivePersistence (sumList n);;
                                        ^
Error: This expression has type int but an expression was expected of type
         int list
